--- a/fondend/phungps24202/assets/css/detail-article.css
+++ b/fondend/phungps24202/assets/css/detail-article.css
@@ -7,31 +7,7 @@ body{
     padding: 15px;
     display: flex;
 }
-.breadcrumb{
-    background-color: white;
-    padding-left: 15px;
-    margin: 0 182px 15px;
-    list-style: none;
-    height: 42px;
-    line-height: 42px;
-}
-.breadcrumb-bound ul.breadcrumb-navigation{
-    margin-bottom: 8.8px;
-    display: inline-flex;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-   
-}
-.breadcrumb-bound li a{
-    font-size: 14px;
-    letter-spacing: 0;
-    color: #003a5a;
-    font-family: Arial;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-}
+
  /* ---------- */
  .detail_article{
     background-color: white;
@@ -55,6 +31,10 @@ body{
     max-width: 100%;
     padding: 16px 24px;
     height: 0 auto;
+   
+ }
+ .news-img img{
+   border-radius: 20px;
  }
 
  .news_detail{
@@ -155,7 +135,6 @@ body{
     margin: 0;
     line-height: 1.5;
     padding-bottom: 10px;
-    border-bottom: 1px solid #A9A9A9;
     
     }
         
