--- a/fondend/phungps24202/assets/css/product.css
+++ b/fondend/phungps24202/assets/css/product.css
@@ -4,8 +4,37 @@
 }
 body {
   font-family: "Open Sans", sans-serif;
+  background-color: #F5F5F5;
 }
 
+
+.top-pagination {
+  text-align: center;
+  margin-top: 100px;
+  padding-left: 1500px;
+}
+
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+}
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
 .container-fuild {
   width: 100%;
 }
@@ -16,75 +45,50 @@ body {
   margin-right: auto;
   display: flex;
   line-height: 50px;
+
 }
 /* .category */
 .container form{
   width: 430px;
 }
-.container .category-title{
-  padding-left: 13.2px;
-  color: #007bff;
-  font-size: 19px;
-  line-height: 1.24vw;
-  font-weight: 400;
-  margin-bottom: 1.06vw;
-  margin-top: 1.52vw;
-}
-.container .category-box{
-  margin-left: 1.32vw;
-  padding-left: 11.7px;
-  width: 82.5%;
-  border-radius: 0px;
-  padding-bottom: 0.25vw;
-  margin-bottom: 0.84vw;
+
+
+.checklist {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   
 }
 
-.category-box .category-box_search{
-  position: relative;
+.checklist-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px; /* Giảm khoảng cách giữa các checkbox */
 }
-.category-box .category-box_icon{
-  position: absolute;
-  bottom: 2px;
-  right: 0px;
-  font-size: 20px;
-  color: #9a9a9a;
 
+.checklist-item input[type="checkbox"] {
+  margin-right: 10px;
+  transform: scale(1.7);
 }
-.category-box .category-box_search input{
-    outline: none;
-    padding: 0px;
-    border-radius: 0px;
-    font-size: 25px;
-    color: #9a9a9a;
-    font-weight: 400;
-    border: 0px;
-    box-shadow: none;
-    height: 100%;
-    text-align: left;
-    padding-left: 4px;
-    
+
+.checklist-item label {
+  font-size: 20px; /* Giảm kích thước font chữ của nhãn */
+  color: #333;
+  cursor: pointer;
+  
+}
+
+.checklist-item input[type="checkbox"]:checked + label {
+  color: #5cb85c;
+  font-weight: bold;
 }
 
 
-.category-box .category-box_line{
-  border-bottom: 1px solid #9a9a9a;;
-  margin-top: 12px;
-} 
-.category-box .category-box_select select{
-  outline: none;
-  padding: 0px;
-  border-radius: 0px;
-  font-size: 25px;
-  line-height: 1.24vw;
-  color: #9a9a9a;
-  font-weight: 400;
-  border: 0px;
-  box-shadow: none;
-  height: 100%;
-  text-align: left;
-  width: 270px;
-}
+
+/* .................... */
+
+
 
 /* category-product */
 .category-list{
@@ -216,17 +220,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  
 }
 
 .product-price__reduced {
   margin-top: 0 !important;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 600;
+  padding-left: 70px;
 }
 
 .product-price__original {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 600;
   color: red;
-  
+  padding-right:  60px;
 }
