--- a/frontdend/assets/css/main.css
+++ b/frontdend/assets/css/main.css
@@ -119,6 +119,9 @@
 .header__cart-item {
     align-self: center;
 }
+.cart__icon {
+    position: relative;
+}
 .cart__icon a {
     display: flex;
     align-items: center;
@@ -452,6 +455,10 @@ p {
     border-radius: 10px;
     border: 1px solid #f1e6e6;
 }
+.item-img {
+    width: 100%;
+    height: 100%;
+}
 .item-img img {
     width: 100%;
     height: 100%;
@@ -622,24 +629,30 @@ p {
     cursor: pointer;
 }
 .cart-modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: absolute;
+    display: none;
+    bottom: -100%;
+    right: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
     z-index: 2;
-    transform: translateX(-200%);
+    /* transform: translateX(-200%); */
     transition: 0.5s ease-out;
 }
+.cart__icon:hover .cart-modal-overlay {
+    display: block;
+    width: 36rem;
+}
 .cart-modal {
-    height: 100vh;
-    width: 50%;
-    background-color: var(--main-color);
+    /* height: 100vh; */
+    width: 100%;
+    background-color: var(--white-color);
     float: right;
-    overflow: scroll;
+    /* overflow: scroll; */
     overflow-x: hidden;
     border-radius: 10px;
+    padding: 0 24px;
 }
 
 #close-btn {
@@ -648,6 +661,7 @@ p {
     margin: 0.5em 2em 0 0;
     color: var(--white-color);
     cursor: pointer;
+    display: none;
 }
 
 .cart-is-empty {
@@ -665,6 +679,7 @@ p {
     flex-direction: column;
     align-items: center;
     /*   display: none; */
+    display: none;
 }
 
 .cart-total {
@@ -693,35 +708,43 @@ p {
 .product-row {
     display: flex;
     justify-content: space-around;
-    width: 80%;
+    width: 100%;
     align-items: center;
     /* margin-top: 10px; */
     background-color: var(--white-color);
     margin: 10px auto;
     border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(50, 50, 93, 0.25);
+    padding: 6px 12px;
+}
+.product-row:hover {
+    background-color: var(--main-color);
+}
+.product-row:hover div {
+    color: var(--white-color);
 }
 .cart-image {
     width: 20%;
     height: 20%;
 }
-.cart-price {
+.cart-price .cart-sale {
     color: var(--text-color);
-    font-size: 1vw;
+    font-size: 0.8vw;
 }
 .product-quantity {
-    width: 4vw;
+    width: 2vw;
     height: 2vw;
     border-radius: 5px;
     text-align: center;
+    display: none;
 }
 .purchase-btn,
 .remove-btn {
     background-color: var(--main-color);
     padding: 10px;
     border-radius: 5px;
-    width: 15%;
-    font-size: 1.2rem;
+    width: 25%;
+    font-size: 1rem;
     color: var(--white-color);
     border: 1px solid var(--white-color);
     cursor: pointer;
