--- a/fondend/cart/css.css
+++ b/fondend/cart/css.css
@@ -84,7 +84,7 @@ table thead th {
 }
 
 .cart img {
-    width: 90%;
+    width: 80px;
 }
 
 .cart_bottom button {
@@ -408,15 +408,16 @@ body {
 }
 
 .xacnhan_dathang p {
-    width: 170px;
+    width: 190px;
     height: 50px;
-    line-height: 50px;
-    padding: 0 5px;
+    line-height: 32px;
+    padding: 10px 5px;
     border-radius: 5px;
     background: #ff990f;
     color: white;
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 10%;
 }
 
 .xacnhan_dathang a {
@@ -490,6 +491,7 @@ table tbody {
 
 .form-control {
     margin-bottom: 10px;
+    width: 100%;
     /* position: relative; */
 }
 
@@ -508,7 +510,7 @@ table tbody {
 }
 
 .form-control select {
-    width: 90%;
+    width: 100%;
     border: 2px solid #f0f0f0;
     font-size: 14px;
     border-radius: 5px;
@@ -584,4 +586,8 @@ table tbody {
 .hinhthuc_pay {
     font-size: 15px;
     margin-left: 20px;
+    width: 50%;
+}
+th, td {
+    padding: 6px 3px;
 }
