--- a/backend/public/customer/css/homePage.css
+++ b/backend/public/customer/css/homePage.css
@@ -38,3 +38,29 @@
 .swiper-wrapper .item-child {
     width: 17% !important;
 }
+
+.home__title,
+.product__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 45px;
+    margin-bottom: 45px;
+}
+
+.home__title .home__title__text,
+.product__title .product__title__text {
+    color: #b7b7b7;
+    font-size: 24px;
+    font-weight: 700;
+    list-style: none;
+    display: inline-block;
+    margin-right: 88px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.home__title .active,
+.product__title .active {
+    color: #111111 !important;
+}
