--- a/backend/public/customer/css/products-list.css
+++ b/backend/public/customer/css/products-list.css
@@ -104,6 +104,10 @@ ol {
     line-height: 20px;
 }
 
+.query__shop__products__select {
+    padding: 4px 6px;
+    border-radius: 5px;
+}
 
 .shop__product__option {
     margin-bottom: 45px;
@@ -123,6 +127,40 @@ ol {
     margin-bottom: 0;
 }
 
+.shop__product__option__left {
+    display: flex;
+    gap: 6px;
+    flex-wrap: wrap;
+}
+
+.shop__product__option__left span {
+    font-size: 12px;
+    color: #8392a5;
+    border-radius: 4px;
+    border: solid 1px #b4bdce;
+    margin: 0 !important;
+    cursor: pointer;
+    position: relative;
+    text-transform: capitalize;
+}
+
+.shop__product__option__left span i {
+    font-size: 13px;
+    color: #111111;
+    font-weight: 600;
+    margin-left: 6px;
+}
+
+.shop__product__option__left span:hover {
+    color: #111111;
+    font-weight: 600;
+    border: solid 1px #111111;
+}
+
+.shop__product__option__left span:hover i {
+    transform: scale(1.2);
+}
+
 
 /* =========================== pagination ========================= */
 .product__pagination {
@@ -134,7 +172,7 @@ ol {
     border-color: #111111;
 }
 
-.product__pagination a {
+.product__pagination .product__pagination__links {
     display: inline-block;
     font-size: 16px;
     font-weight: 700;
