--- a/backend/public/customer/css/base.css
+++ b/backend/public/customer/css/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap');
+
 :root {
     --white-color: #fff;
     --black-color: #000;
@@ -6,202 +8,25 @@
 }
 
 * {
-    box-sizing: inherit;
-    text-decoration: none;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-html {
-    font-size: 62.5%;
-    line-height: 1.6rem;
-    box-sizing: border-box;
+body {
+    font-family: 'Nunito Sans', sans-serif !important;
+    background-color: #f7f7f7;
 }
 
 .d-none {
     display: none;
 }
 
+/*
 .container {
     width: 100%;
-}
+} */
 
-.header {
-    background-color: #02bbff;
-    height: 25%;
-    width: 100%;
-    /* display: table;
-  position: fixed; */
-    /* width: 100%; */
-}
-
-.header-with-search {
-    padding: 12px 0 0 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.header__logo {
-    width: 15%;
-}
-
-.header__logo a img {
-    width: 80%;
-    height: 80%;
-}
-
-.header__search {
-    display: flex;
-    align-items: center;
-    height: 4rem;
-    width: 40%;
-}
-
-.header__search input[type='text'] {
-    width: 100%;
-    border-radius: 5px 0px 0px 5px;
-    border: 1px solid var(--white-color);
-    border-right: unset;
-    height: 100%;
-    padding: 0 0 0 24px;
-    font-size: 14px;
-}
-
-.header__search input[type='text']:focus-visible {
-    outline: unset;
-}
-
-.header__search button {
-    width: 10%;
-    border: 1px solid var(--white-color);
-    border-left: unset;
-    height: 100%;
-    border-radius: 0px 5px 5px 0px;
-    background-color: var(--white-color);
-}
-
-.header__register {
-    width: 15%;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.header__register-item {
-    cursor: pointer;
-    position: relative;
-}
-
-.header-nav__icon {
-    padding: 12px !important;
-    position: relative;
-}
-
-.header-icons {
-    font-size: 24px !important;
-    color: var(--white-color);
-}
-
-.cart-total__quantity {
-    padding: 2px 7px;
-    background: #fff;
-    border-radius: 50%;
-    font-size: 12px;
-    position: absolute;
-    top: 0;
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
-    right: 0;
-    border: 1px solid #ccc;
-}
-
-
-.register__title {
-    /* display: none; */
-    position: absolute;
-    min-width: 200px;
-    max-width: auto;
-    padding: 8px 12px;
-    background-color: #FFF;
-    right: 0;
-    border-radius: 5px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    z-index: 10;
-}
-
-.register__title a {
-    padding: 10px 0 !important;
-    display: block;
-    font-size: 16px;
-    color: var(--black-color);
-    font-weight: 500;
-}
-
-.register__title a:hover {
-    color: var(--main-color);
-}
-
-.header__cart-item {
-    align-self: center;
-}
-
-.cart__icon a img {
-    width: 100%;
-    height: 100%;
-}
-
-.header-with-menu {
-    text-align: center;
-    /* padding: 6px 0; */
-}
-
-.header-with-menu ul li {
-    display: inline-block;
-    padding: 10px 12px;
-}
-
-.header-with-menu ul li a {
-    font-size: 16px;
-    font-weight: 700;
-    color: var(--white-color);
-}
-
-.header-with-menu ul li:hover {
-    transition: all 0.5s;
-    background-color: var(--white-color);
-    border-radius: 5px;
-}
-
-.header-with-menu ul li:hover a,
-.menu-child:hover ul li:hover a {
-    color: var(--main-color);
-}
-
-.header-with-menu ul .menu-slected a {
-    color: red;
-}
-
-.menu-child ul {
-    display: none;
-    padding: 5px;
-    position: fixed;
-    min-width: 350px;
-    margin-top: 10px;
-    background-color: var(--main-color);
-    border-radius: 5px;
-    z-index: 9999;
-}
-
-.menu-child:hover ul {
-    display: block;
-}
-
-.menu-child:hover ul li {
-    display: block;
-}
-
-.menu-child:hover ul li a {
-    color: var(--white-color);
-}
 
 .footer {
     width: 100%;
@@ -305,8 +130,9 @@ p {
 }
 
 .page-main {
-    width: 95%;
+    width: 80%;
     margin: 0 auto;
+    background-color: #FFF;
 }
 
 .slider {
@@ -417,7 +243,6 @@ p {
     margin-right: auto;
     display: flex;
     align-items: center;
-    height: 3.6vw;
 }
 
 .home-title div:not(:last-child) {
@@ -598,4 +423,63 @@ p {
 .toast:not(.show) {
     display: flex !important;
     background: #FFF !important;
+}
+
+/* =================== cart mini ================ */
+.cart-item {
+    display: flex;
+    margin-bottom: 12px;
+    cursor: pointer;
+    justify-content: space-between;
+}
+
+.cart-item__image {
+    width: 60px;
+    height: 70px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 50% 50%;
+}
+
+.cart-item__info {
+    font-size: 14px;
+    width: 75%;
+}
+
+.item__info__name {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    line-height: 1rem;
+    margin-bottom: 6px;
+}
+
+.cart__mini__item {
+    text-decoration: none;
+    color: #111111;
+}
+
+.cart-item__price {
+    display: flex;
+    align-items: baseline;
+}
+
+.cart-item__price .item__price__original {
+    margin-bottom: 0;
+    color: red;
+    font-weight: 600;
+}
+
+.cart-item__price .item__price {
+    margin-bottom: 0;
+    font-size: 12px;
+    margin-left: 6px;
+}
+
+.cart-item__quantity {
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
