--- a/backend/public/customer/css/productDetail.css
+++ b/backend/public/customer/css/productDetail.css
@@ -1,7 +1,7 @@
-
 html {
     line-height: 1.5;
 }
+
 #container-ct {
     position: relative;
 }
@@ -44,9 +44,6 @@ html {
 }
 
 .detail-box1_img {
-    width: 100%;
-
-    position: absolute;
     text-align: center;
     opacity: 1;
     padding-top: 25px;
@@ -56,14 +53,13 @@ html {
 }
 
 .detail-box1_img img {
-    width: 300px;
+    width: 400px;
     height: 441.175px;
 }
 
 .detail-introduce h3 {
-    margin-top: 550px;
-    text-transform: uppercase;
-    text-decoration: none;
+    text-align: center;
+    text-transform: initial;
     margin-bottom: 10px;
     font-weight: 700;
     color: #2b2b2b;
@@ -79,40 +75,36 @@ html {
 
 
 /* Box2 */
-.detail-box2 {
-    width: 45%;
-    padding: 12px 24px;
-    margin: 0 auto;
-}
-
-.detail-box2 .detail-box2_content {
+.detail-box2 {}
+.detail-box2_content {
     position: sticky;
     top: 30px;
 }
 
 
-.detail2-title h3 {
-
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Roboto', sans-serif;
+.detail2-title .product__name {
     font-size: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
+    font-weight: 600;
+    text-transform: inherit;
 }
 
 .detail2-author p {
-    font-size: 20px;
-    /* text-decoration: none; */
+    color: #111111;
+    font-weight: 600;
+    font-size: 16px;
+    margin-bottom: 6px;
 }
 
 .detail2-author a {
     text-decoration: none;
-    color: #00B2EE;
-    font-weight: 400;
+    margin-left: 12px;
+    color: #eb7c26;
+    font-weight: 600;
 }
 
 span.text-muted {
-    font-size: 24px;
+    margin: 6px 0;
+    font-size: 16px;
     color: #909090;
 }
 
@@ -122,26 +114,28 @@ span.text-muted a {
 }
 
 .detail2-price {
-    /* margin-top: 12px; */
+    margin: 6px 0;
     display: flex;
-    align-items: center;
+    align-items: baseline
 }
 
 .detail2-price__reduced {
-    font-size: 40px;
+    font-size: 24px;
     font-weight: 600;
     color: red;
+    margin-bottom: 0;
 }
 
 .detali2-price__original {
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 600;
     /* margin-top: 56px; */
     margin-left: 20px;
 }
 
-.detail-box2 p.transport {
-    font-size: 18px;
+.transport {
+    margin: 12px 0;
+    font-size: 16px;
 }
 
 .detail2-status p.status {
@@ -160,40 +154,33 @@ span.text-muted a {
     font-weight: bold;
 }
 
-.detail2-buy button {
-    background-color: #4CAF50;
-    /* Màu nền */
-    border: none;
-    /* Không có đường viền */
-    color: white;
-    /* Màu chữ */
-    padding: 12px 24px;
-    /* Kích thước */
-    text-align: center;
-    /* Căn giữa nội dung */
-    text-decoration: none;
-    /* Không có đường gạch chân */
+.btn-add__cart {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 25px;
+}
+
+.btn-add__cart .add__cart  {
     display: inline-block;
-    /* Hiển thị là một khối */
-    font-size: 16px;
-    /* Cỡ chữ */
-    cursor: pointer;
-    /* Chỉ số hình cắt: khi rê chuột qua */
-    border-radius: 4px;
-    /* Bo tròn các góc */
-    margin-top: 20px;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 14px 25px;
+    color: #ffffff;
+    background: #0066ff;
+    letter-spacing: 2px;
 }
 
-.detail2-buy button:hover {
-    background-color: #3e8e41;
-}
-
-.detail2-buy button.buy2 {
-    background-color: #FFD700;
-}
-
-.detail2-buy button.buy2:hover {
-    background-color: #CDAD00;
+.btn-add__cart .add-to__cart {
+    display: inline-block;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 14px 25px;
+    color: #ffffff;
+    background: #000000;
+    letter-spacing: 2px;
 }
 
 /* end-detail2 */
@@ -235,6 +222,7 @@ span.text-muted a {
     border-bottom: 1px solid #cbd1d6;
     resize: none;
     border-radius: 6px;
+    padding: 6px 175px 6px 12px;
 }
 
 .form-group button {
@@ -246,7 +234,6 @@ span.text-muted a {
     top: 36px;
     font-weight: 300;
     background: #cb1c22;
-    ;
     color: #fff;
     outline: none;
     transform: translateY(-50%);
@@ -299,10 +286,14 @@ span.text-muted a {
 
 
 .related-title {
-    border-top: 1px solid #cbd1d6;
-    font-size: 15px;
-    text-transform: uppercase;
-    color: #2b2b2b;
+    margin: 25px 0;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 24px;
+    font-weight: 700;
+    list-style: none;
+    cursor: pointer;
+    transition: all 0.5s;
 }
 
 .related-book {
@@ -381,4 +372,33 @@ span.text-muted a {
     font-weight: 600;
     color: red;
     padding-bottom: 20px;
+}
+
+.tbody__table__detail tr th {
+    font-size: 14px !important;
+}
+
+.detail__introduction {
+    text-align: justify;
+    line-height: 1.5;
+    height: 200px;
+    overflow: hidden;
+}
+
+.detail-box1_describe .active {
+    height: auto !important;
+}
+
+.keep__reading {
+    text-align: center;
+    font-size: 16px;
+    color: red;
+    display: block;
+    margin: 12px 0;
+    line-height: 1.5;
+    cursor: pointer;
+}
+
+.keep__reading:hover {
+    text-decoration: underline;
 }
