--- a/backend/public/customer/css/auth/login.css
+++ b/backend/public/customer/css/auth/login.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     background: linear-gradient(53deg, rgba(25, 191, 203, 1) 6%, rgba(188, 81, 218, 1) 61%);
 
 }
