--- a/backend/public/customer/css/base.css
+++ b/backend/public/customer/css/base.css
@@ -22,6 +22,11 @@ body {
     display: none;
 }
 
+.error {
+    font-size: 14px;
+    color: red;
+}
+
 /*
 .container {
     width: 100%;
@@ -287,13 +292,13 @@ p {
     padding: 8px 32px;
 }
 
-.btn:hover {
+/* .btn:hover {
     opacity: 0.8;
-}
+} */
 
-.btn+.btn {
+/* .btn+.btn {
     margin-left: 16px;
-}
+} */
 
 .btn--success {
     background-color: #71be34;
