--- a/backend/public/customer/css/shoppingCart.css
+++ b/backend/public/customer/css/shoppingCart.css
@@ -75,12 +75,15 @@ input {
 }
 
 .discount-code_input {
-    width: 70% !important;
+    width: 80% !important;
     line-height: 32px;
     font-size: 16px;
 }
 
 .discount-code_btn {
+    width: 20%;
+    line-height: 14px !important;
+    font-size: 12px !important;
     top: 0;
     right: 0;
     line-height: 32px;
