--- a/backend/public/customer/css/header.css
+++ b/backend/public/customer/css/header.css
@@ -13,6 +13,10 @@ a {
     text-decoration: none !important;
 }
 
+p {
+    margin-bottom: 0;
+}
+
 .header {
     background-color: #02bbff;
     height: 25%;
@@ -43,6 +47,7 @@ a {
     align-items: center;
     height: 42px;
     width: 40%;
+    position: relative;
 }
 
 .header__search input[type='text'] {
@@ -66,6 +71,58 @@ a {
     height: 100%;
     border-radius: 0px 5px 5px 0px;
     background-color: var(--white-color);
+}
+
+.header__search_product__item {
+    display: flex;
+    gap: 12px;
+    color: #111111;
+    width: 80%;
+    margin-bottom: 12px;
+}
+
+.header__search_product__item:hover {
+    background-color: #f5f5f5 !important;
+    border-radius: 5px;
+}
+
+.item__detail {
+    width: 80%;
+}
+
+.item__detail__name {
+    /* width: 80%; */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    /* line-height: 1.6rem; */
+}
+
+.header__search__list__item {
+    padding: 24px;
+    background-color: #fff;
+    width: 100%;
+    min-height: 70px;
+    z-index: 10;
+    position: absolute;
+    top: 45px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.item__image {
+    width: 70px;
+    height: 90px;
+}
+
+.item__detail {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
 }
 
 .header__register {
