--- a/backend/public/customer/css/shoppingCart.css
+++ b/backend/public/customer/css/shoppingCart.css
@@ -197,3 +197,10 @@ input {
     font-size: 16px;
     font-weight: 600;
 }
+
+.delivery_form__box {
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    gap: 12px;
+}
