--- a/backend/public/customer/css/base.css
+++ b/backend/public/customer/css/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,300&display=swap');
 
 :root {
     --white-color: #fff;
@@ -14,7 +14,7 @@
 }
 
 body {
-    font-family: 'Nunito Sans', sans-serif !important;
+    font-family: 'Red Rose' !important;
     background-color: #f7f7f7;
 }
 
