--- a/backend/public/customer/css/header.css
+++ b/backend/public/customer/css/header.css
@@ -129,6 +129,7 @@ p {
     width: 15%;
     display: flex;
     justify-content: flex-end;
+    gap: 12px;
 }
 
 .header__register-item {
@@ -177,16 +178,15 @@ p {
 }
 
 .register__title a {
-    padding: 10px 12px !important;
+    padding: 7px 0 !important;
     display: block;
-    font-size: 16px;
-    color: var(--black-color);
+    font-size: 0.9rem;
+    color: #666;
     font-weight: 500;
 }
 
 .register__title a:hover {
-    color: var(--main-color);
-    background-color: #e8ebed;
+    color: #292929;
 }
 
 .header__cart-item {
@@ -206,19 +206,31 @@ p {
 .header-with-menu {
     text-align: center;
     background-color: var(--white-color);
-    padding: 6px 0;
+    padding: 3px 0;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 .header-with-menu ul li {
-    display: inline-block;
-    padding: 10px 12px;
+    /* display: inline-block; */
+    padding: 10px 15px;
+    list-style-type: none;
 }
 
-.header-with-menu ul li a {
-    font-size: 15px !important;
+.header-with-menu ul .nav-categories__li:hover {
+    background-color: #1111;
+    border-radius: 5px;
+}
+
+/* .header-with-menu ul li:hover .navbar-item__a {
+    font-weight: 600;
+} */
+
+.header-with-menu ul li .navbar-item__a {
+    font-size: 17px !important;
     color: var(--black-color);
     text-decoration: none !important;
+    font-weight: 500;
+    text-transform: capitalize;
 }
 
 .header-with-menu ul .active a {
@@ -331,4 +343,86 @@ p {
     right: 110px;
     bottom: 15px;
     line-height: 20px;
+}
+
+.user_menu {
+    align-items: center;
+    display: flex;
+    margin-bottom: 12px;
+}
+
+.user_menu_image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.user_menu_info {
+    margin-left: 12px;
+    color: #1d2129;
+}
+
+.user_menu_name {
+    color: #292929;
+    font-size: 0.9rem;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.user_menu_email {
+    color: #757575;
+    font-size: 0.8rem;
+    margin-top: 4px;
+    display: block;
+    max-width: 1250px;
+    overflow: hidden !important;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: center !important;
+    text-transform: capitalize;
+}
+
+.nav-categories {
+    display: flex;
+    justify-content: center
+}
+
+.navbar {
+    position: relative;
+}
+
+.nav-item {
+    display: none;
+    padding: 6px 0 !important;
+    position: absolute;
+    min-width: 180px;
+    top: 45px;
+    text-align: left;
+    background-color: #fff;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    transition: all 0.5s;
+    width: 115%;
+    left: 0;
+}
+
+.nav-item__li__a {
+    color: #111111;
+}
+
+.nav-item__li {
+    width: 100%;
+    display: block;
+    padding: 10px 15px !important
+}
+
+.navbar:hover .nav-item {
+    display: block;
+}
+
+.nav-item__li:hover {
+    background-color: #fff !important;
+}
+
+.nav-item__li:hover .nav-item__li__a {
+    color: #ed1d24 !important;
 }
